# flipping

./: .dockerignore  .gitignore  Dockerfile  compose.prod.yml  compose.production.yml  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py  tasks.py
redis/: Dockerfile  entrypoint.sh
