[project]
name = "flipping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.5",
]
